// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme Provider Selector Selector fo blog theme should render for blog the,e throwing an error 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "dark": "rgba(0, 0, 0, 0.84)",
        "light": "rgb(255, 255, 255)",
        "lightDark": "rgba(0, 0, 0, 0.54)",
      },
      "content": Object {
        "letterSpacing": "-0.004em",
        "lineHeight": "40px",
        "marginTop": "2em",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {},
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "header": Object {
        "fontSize": "36px",
        "fontSizeOnPhone": "28px",
      },
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {},
      "marginFromContent": "32px",
      "postMarginTop": "0",
      "postMaxWidth": "768px",
      "postSurroundingsPadding": "0px 35px",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
    }
  }
>
  <GlobalStyleCss
    theme={
      Object {
        "colors": Object {
          "dark": "rgba(0, 0, 0, 0.84)",
          "light": "rgb(255, 255, 255)",
          "lightDark": "rgba(0, 0, 0, 0.54)",
        },
        "content": Object {
          "letterSpacing": "-0.004em",
          "lineHeight": "40px",
          "marginTop": "2em",
        },
        "defaultLineHeight": 1.57,
        "extra": Object {},
        "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
        "fontSizes": Object {
          "L": "16px",
          "M": "14px",
          "S": "12px",
          "XL": "18px",
          "XS": "10px",
          "XXL": "22px",
          "XXXL": "24px",
          "base": "14px",
        },
        "fonts": Object {
          "fontCert": "Times, serif",
          "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
          "fontIp": "\\"ip\\", sans-serif",
          "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
          "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
          "fontTrebuchet": "Trebuchet MS, sans-serif",
        },
        "header": Object {
          "fontSize": "36px",
          "fontSizeOnPhone": "28px",
        },
        "icons": Object {
          "c": "C",
          "fb": "\\\\e811",
          "goTop": "\\\\e817",
          "link": "\\\\e819",
          "linkedin": "\\\\e815",
          "location": "\\\\e806",
          "mail": "\\\\e800",
          "p": "P",
          "phone": "\\\\e81a",
          "workexp": "\\\\e804",
        },
        "images": Object {},
        "marginFromContent": "32px",
        "postMarginTop": "0",
        "postMaxWidth": "768px",
        "postSurroundingsPadding": "0px 35px",
        "spaces": Object {
          "gutter": 16,
          "large": 35,
          "medium": 25,
          "small": 16,
          "xlarge": 45,
          "xsmall": 13,
          "xxsmall": 10,
          "xxxsmall": 7,
        },
      }
    }
  />
</ThemeProvider>
`;

exports[`Theme Provider Selector Selector fo normal theme should render for christmas day without throwing an error 1`] = `
<ThemeProvider
  theme={
    Object {
      "aboutMarginTop": "-200px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#ff8484",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#f3f6f6",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "58px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/christmas/bg-christmas.webp",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/christmas/bg-pattern-snow.webp",
        "bgPatternOpacity": "0.25",
        "bgSize": "450px 450px",
        "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
        "overlayBgColor": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
    }
  }
>
  <GlobalStyleCss
    theme={
      Object {
        "aboutMarginTop": "-200px",
        "colors": Object {
          "bgColor": "#fff",
          "colorAccent": "#ff8484",
          "colorBlack": "#000000",
          "colorDark": "#2c3e50",
          "colorDarken": "#bdc3c7",
          "colorLight": "#f3f6f6",
          "ghostWhite": "#f8f8ff ",
          "grey": "#696969",
        },
        "defaultLineHeight": 1.57,
        "extra": Object {
          "boxShadow": "0 1px 2px -1px #2c3e50",
        },
        "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
        "fontSizes": Object {
          "L": "16px",
          "M": "14px",
          "S": "12px",
          "XL": "18px",
          "XS": "10px",
          "XXL": "22px",
          "XXXL": "24px",
          "base": "14px",
        },
        "fonts": Object {
          "fontCert": "Times, serif",
          "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
          "fontIp": "\\"ip\\", sans-serif",
          "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
          "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
          "fontTrebuchet": "Trebuchet MS, sans-serif",
        },
        "footerHeight": "58px",
        "headerPadding": "200px 10px 250px",
        "icons": Object {
          "c": "C",
          "fb": "\\\\e811",
          "goTop": "\\\\e817",
          "link": "\\\\e819",
          "linkedin": "\\\\e815",
          "location": "\\\\e806",
          "mail": "\\\\e800",
          "p": "P",
          "phone": "\\\\e81a",
          "workexp": "\\\\e804",
        },
        "images": Object {
          "background": "/images/christmas/bg-christmas.webp",
          "backgroundMobile": "/images/bg-mobile.webp",
          "bgPattern": "/images/christmas/bg-pattern-snow.webp",
          "bgPatternOpacity": "0.25",
          "bgSize": "450px 450px",
          "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
          "overlayBgColor": "rgba(44, 62, 80, 0.3)",
        },
        "navContentMinHeight": "80px",
        "navHeaderHeight": "40px",
        "navHeightWhenScrollingOnMobile": "45px",
        "navPosWhenHiding": "-220px",
        "productImageRatio": "143%",
        "spaces": Object {
          "gutter": 16,
          "large": 35,
          "medium": 25,
          "small": 16,
          "xlarge": 45,
          "xsmall": 13,
          "xxsmall": 10,
          "xxxsmall": 7,
        },
      }
    }
  />
</ThemeProvider>
`;

exports[`Theme Provider Selector Selector fo normal theme should render for new year day without throwing an error 1`] = `
<ThemeProvider
  theme={
    Object {
      "aboutMarginTop": "-115px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#F0B14A",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#f3f6f6",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "58px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/newyear/bg-newyear.webp",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/newyear/bg-pattern.webp",
        "bgPatternOpacity": "0.3",
        "bgSize": "400px 265px",
        "overlay": "",
        "overlayBgColor": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
      "titleBgColor": "rgba(44, 25, 0, 0.6)",
    }
  }
>
  <GlobalStyleCss
    theme={
      Object {
        "aboutMarginTop": "-115px",
        "colors": Object {
          "bgColor": "#fff",
          "colorAccent": "#F0B14A",
          "colorBlack": "#000000",
          "colorDark": "#2c3e50",
          "colorDarken": "#bdc3c7",
          "colorLight": "#f3f6f6",
          "ghostWhite": "#f8f8ff ",
          "grey": "#696969",
        },
        "defaultLineHeight": 1.57,
        "extra": Object {
          "boxShadow": "0 1px 2px -1px #2c3e50",
        },
        "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
        "fontSizes": Object {
          "L": "16px",
          "M": "14px",
          "S": "12px",
          "XL": "18px",
          "XS": "10px",
          "XXL": "22px",
          "XXXL": "24px",
          "base": "14px",
        },
        "fonts": Object {
          "fontCert": "Times, serif",
          "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
          "fontIp": "\\"ip\\", sans-serif",
          "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
          "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
          "fontTrebuchet": "Trebuchet MS, sans-serif",
        },
        "footerHeight": "58px",
        "headerPadding": "200px 10px 250px",
        "icons": Object {
          "c": "C",
          "fb": "\\\\e811",
          "goTop": "\\\\e817",
          "link": "\\\\e819",
          "linkedin": "\\\\e815",
          "location": "\\\\e806",
          "mail": "\\\\e800",
          "p": "P",
          "phone": "\\\\e81a",
          "workexp": "\\\\e804",
        },
        "images": Object {
          "background": "/images/newyear/bg-newyear.webp",
          "backgroundMobile": "/images/bg-mobile.webp",
          "bgPattern": "/images/newyear/bg-pattern.webp",
          "bgPatternOpacity": "0.3",
          "bgSize": "400px 265px",
          "overlay": "",
          "overlayBgColor": "rgba(44, 62, 80, 0.3)",
        },
        "navContentMinHeight": "80px",
        "navHeaderHeight": "40px",
        "navHeightWhenScrollingOnMobile": "45px",
        "navPosWhenHiding": "-220px",
        "productImageRatio": "143%",
        "spaces": Object {
          "gutter": 16,
          "large": 35,
          "medium": 25,
          "small": 16,
          "xlarge": 45,
          "xsmall": 13,
          "xxsmall": 10,
          "xxxsmall": 7,
        },
        "titleBgColor": "rgba(44, 25, 0, 0.6)",
      }
    }
  />
</ThemeProvider>
`;

exports[`Theme Provider Selector Selector fo normal theme should render for normal day without throwing an error 1`] = `
<ThemeProvider
  theme={
    Object {
      "aboutMarginTop": "-200px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#FFA726",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#f3f6f6",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "58px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/bg.webp",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/bg-pattern.webp",
        "bgPatternOpacity": "1",
        "bgSize": "200px 200px",
        "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
        "overlayBgColor": "rgba(44, 62, 80, 0.4)",
        "overlayBgColorMobile": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
    }
  }
>
  <GlobalStyleCss
    theme={
      Object {
        "aboutMarginTop": "-200px",
        "colors": Object {
          "bgColor": "#fff",
          "colorAccent": "#FFA726",
          "colorBlack": "#000000",
          "colorDark": "#2c3e50",
          "colorDarken": "#bdc3c7",
          "colorLight": "#f3f6f6",
          "ghostWhite": "#f8f8ff ",
          "grey": "#696969",
        },
        "defaultLineHeight": 1.57,
        "extra": Object {
          "boxShadow": "0 1px 2px -1px #2c3e50",
        },
        "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
        "fontSizes": Object {
          "L": "16px",
          "M": "14px",
          "S": "12px",
          "XL": "18px",
          "XS": "10px",
          "XXL": "22px",
          "XXXL": "24px",
          "base": "14px",
        },
        "fonts": Object {
          "fontCert": "Times, serif",
          "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
          "fontIp": "\\"ip\\", sans-serif",
          "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
          "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
          "fontTrebuchet": "Trebuchet MS, sans-serif",
        },
        "footerHeight": "58px",
        "headerPadding": "200px 10px 250px",
        "icons": Object {
          "c": "C",
          "fb": "\\\\e811",
          "goTop": "\\\\e817",
          "link": "\\\\e819",
          "linkedin": "\\\\e815",
          "location": "\\\\e806",
          "mail": "\\\\e800",
          "p": "P",
          "phone": "\\\\e81a",
          "workexp": "\\\\e804",
        },
        "images": Object {
          "background": "/images/bg.webp",
          "backgroundMobile": "/images/bg-mobile.webp",
          "bgPattern": "/images/bg-pattern.webp",
          "bgPatternOpacity": "1",
          "bgSize": "200px 200px",
          "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
          "overlayBgColor": "rgba(44, 62, 80, 0.4)",
          "overlayBgColorMobile": "rgba(44, 62, 80, 0.3)",
        },
        "navContentMinHeight": "80px",
        "navHeaderHeight": "40px",
        "navHeightWhenScrollingOnMobile": "45px",
        "navPosWhenHiding": "-220px",
        "productImageRatio": "143%",
        "spaces": Object {
          "gutter": 16,
          "large": 35,
          "medium": 25,
          "small": 16,
          "xlarge": 45,
          "xsmall": 13,
          "xxsmall": 10,
          "xxxsmall": 7,
        },
      }
    }
  />
</ThemeProvider>
`;

exports[`Theme Provider Selector Selector fo normal theme should render for tet without throwing an error 1`] = `
<ThemeProvider
  theme={
    Object {
      "aboutMarginTop": "-111px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#FFA500",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#f3f6f6",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "58px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/tet/bg-tet.webp",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/tet/bg-pattern.webp",
        "bgPatternOpacity": "0.1",
        "bgSize": "400px 265px",
        "overlay": "",
        "overlayBgColor": "",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
      "titleBgColor": "rgba(44, 25, 0, 0.2)",
    }
  }
>
  <GlobalStyleCss
    theme={
      Object {
        "aboutMarginTop": "-111px",
        "colors": Object {
          "bgColor": "#fff",
          "colorAccent": "#FFA500",
          "colorBlack": "#000000",
          "colorDark": "#2c3e50",
          "colorDarken": "#bdc3c7",
          "colorLight": "#f3f6f6",
          "ghostWhite": "#f8f8ff ",
          "grey": "#696969",
        },
        "defaultLineHeight": 1.57,
        "extra": Object {
          "boxShadow": "0 1px 2px -1px #2c3e50",
        },
        "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
        "fontSizes": Object {
          "L": "16px",
          "M": "14px",
          "S": "12px",
          "XL": "18px",
          "XS": "10px",
          "XXL": "22px",
          "XXXL": "24px",
          "base": "14px",
        },
        "fonts": Object {
          "fontCert": "Times, serif",
          "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
          "fontIp": "\\"ip\\", sans-serif",
          "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
          "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
          "fontTrebuchet": "Trebuchet MS, sans-serif",
        },
        "footerHeight": "58px",
        "headerPadding": "200px 10px 250px",
        "icons": Object {
          "c": "C",
          "fb": "\\\\e811",
          "goTop": "\\\\e817",
          "link": "\\\\e819",
          "linkedin": "\\\\e815",
          "location": "\\\\e806",
          "mail": "\\\\e800",
          "p": "P",
          "phone": "\\\\e81a",
          "workexp": "\\\\e804",
        },
        "images": Object {
          "background": "/images/tet/bg-tet.webp",
          "backgroundMobile": "/images/bg-mobile.webp",
          "bgPattern": "/images/tet/bg-pattern.webp",
          "bgPatternOpacity": "0.1",
          "bgSize": "400px 265px",
          "overlay": "",
          "overlayBgColor": "",
        },
        "navContentMinHeight": "80px",
        "navHeaderHeight": "40px",
        "navHeightWhenScrollingOnMobile": "45px",
        "navPosWhenHiding": "-220px",
        "productImageRatio": "143%",
        "spaces": Object {
          "gutter": 16,
          "large": 35,
          "medium": 25,
          "small": 16,
          "xlarge": 45,
          "xsmall": 13,
          "xxsmall": 10,
          "xxxsmall": 7,
        },
        "titleBgColor": "rgba(44, 25, 0, 0.2)",
      }
    }
  />
</ThemeProvider>
`;
